Use variables to pass username and password of CUPS user
Create CUPS administrator user during boot if variables `CUPS_USER` and
`CUPS_PASS` were passed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
         BUILD_DATE: "${BUILD_DATE}"
         BUILD_VERSION: "${BUILD_VERSION}"
     restart: unless-stopped
+    environment:
+      - CUPS_USER=admin
+      - CUPS_PASS=admin
     volumes:
       - /dev/bus/usb:/dev/bus/usb
       - /run/dbus:/run/dbus
