Check if base image was updated
https://www.flypenguin.de/2021/07/30/auto-rebuild-docker-images-if-base-image-changes-using-github-actions/
https://github.com/lucacome/docker-image-update-checker
https://github.com/jacklul/pihole-updatelists/blob/46ed973b9d/.github/workflows/image-latest.yml

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,7 +18,26 @@ env:
 
 jobs:
 
+  check:
+    runs-on: ubuntu-latest
+    outputs:
+      image-needs-updating: ${{ steps.check.outputs.needs-updating }}
+    steps:
+      - name: Check if update available
+        id: check
+        uses: lucacome/docker-image-update-checker@v1.2.0
+        with:
+          base-image: ${{ env.IMAGE_BASE }}
+          image: ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}
+        if: github.event_name == 'schedule'
+
   build:
+
+    needs: check
+
+    if: |
+      github.event_name != 'schedule' ||
+      needs.check.outputs.image-needs-updating == 'true'
 
     runs-on: ubuntu-latest
 
